--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
            описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li class="intro__list_word">
-            <p>Часовых поясов <span class="intro__list_number">11</span></p>
+          <li class="intro__word">
+            <p>Часовых поясов <span class="intro__number">11</span></p>
           </li>
-          <li class="intro__list_word">
-            <p>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></p>
+          <li class="intro__word">
+            <p>Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
           </li>
-          <li class="intro__list_word">
-            <p>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></p>
+          <li class="intro__word">
+            <p>Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
           </li>
-          <li class="intro__list_word">
-            <p>Природных заповедников <span class="intro__list_number">105</span></p>
+          <li class="intro__word">
+            <p>Природных заповедников <span class="intro__number">105</span></p>
           </li>
-          <li class="intro__list_word">
-            <p>Аэропортов <span class="intro__list_number">241</span></p>
+          <li class="intro__word">
+            <p>Аэропортов <span class="intro__number">241</span></p>
           </li>
         </ul>
       </section>
