--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="lead__image"></div>
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
-      <section class="intro">
+       <section class="intro content__intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
            планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
@@ -52,7 +52,7 @@
           </li>
         </ul>
       </section>
-      <div class="photo-grid">
+       <div class="photo-grid content__photo-grid">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака над горой">
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
@@ -66,12 +66,12 @@
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Крутой пляж">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане">
       </div>
-      <section class="places">
+       <section class="places content__places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__pos-link">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Пейзаж косы">
           <div class="place__paragraph">
@@ -83,7 +83,7 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__pos-link">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">National Geographic</a>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
           </div>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Пейзаж полуострова">
           <div class="place__paragraph">
@@ -97,7 +97,7 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
-          <a href="#" class="place__link">Facebook</a>
+          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Пезаж Алтая">
           <div class="place__paragraph">
@@ -109,7 +109,7 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
-          <a href="#" class="place__link">https://vk.com/baikalmile</a>
+          <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед Байкала">
           <div class="place__paragraph">
@@ -121,7 +121,7 @@
           <h2 class="place__title">Карелия</h2>
           <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
-          <a href="#" class="place__link">http://vodlozero.ru/</a>
+          <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Пейзаж Карелии">
           <div  class="place__paragraph">
@@ -129,21 +129,24 @@
           </div>
         </div>
       </section>
-      <section class="cover">
-        <h2 class="cover__title"><span>До Байкала
-            «на собаках»</span></h2>
-        <p class="cover__subtitle"><span>По мотивам учебной темы о Транссибе
-             — путешествие от столицы до Байкала
-              на электричках.</span></p>
-      </section>
+      <div class="page__container">
+        <section class="cover">
+          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title"><span>До Байкала
+              «на собаках»</span></h2>
+          <p class="cover__subtitle"><span>По мотивам учебной темы о Транссибе
+               — путешествие от столицы до Байкала
+                на электричках.</span></p>
+              </a>
+        </section>
+      </div>
     </main>
     <footer class="footer page__footer">
       <div class="footer__links">
-      <a class="footer__link" href="">Карты</a>
-      <a class="footer__link" href="">Погода</a>
-      <a class="footer__link" href="">Расписание</a>
-      <a class="footer__link" href="">Календарь</a>
-      <a class="footer__link" href="">Путешествия</a>
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
       </div>
       <p class="footer__copyright">2022&copy; Кочетков Илья</p>
     </footer>
