--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="page">
     <header class="header page__header">
       <div class="header__logo"></div>
-      <div>
-      <a href="#" class="header__lang-link">RU</a>
-      <a href="#" class="header__lang-link header__lang-link_underline">EN</a>
+      <div class="header__link">
+      <a href="#" class="header__lang-link">Ru</a>
+      <a href="#" class="header__lang-link header__lang-link_underline">En</a>
       </div>
     </header>
      <main class="content">
@@ -20,7 +20,7 @@
           по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
-        <div class="lead__image"></div>
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка поезда">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
        <section class="intro content__intro">
@@ -35,24 +35,24 @@
            описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li class="intro__word">
-            <p>Часовых поясов <span class="intro__number">11</span></p>
+          <li class="intro__value">
+            <p class="intro__word">Часовых поясов <span class="intro__number">11</span></p>
           </li>
-          <li class="intro__word">
-            <p>Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
+          <li class="intro__value">
+            <p class="intro__word">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
           </li>
-          <li class="intro__word">
-            <p>Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
+          <li class="intro__value">
+            <p class="intro__word">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
           </li>
-          <li class="intro__word">
-            <p>Природных заповедников <span class="intro__number">105</span></p>
+          <li class="intro__value">
+            <p class="intro__word">Природных заповедников <span class="intro__number">105</span></p>
           </li>
-          <li class="intro__word">
-            <p>Аэропортов <span class="intro__number">241</span></p>
+          <li class="intro__value">
+            <p class="intro__word">Аэропортов <span class="intro__number">241</span></p>
           </li>
         </ul>
       </section>
-       <div class="photo-grid content__photo-grid">
+      <div class="photo-grid content__photo-grid">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака над горой">
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
@@ -66,7 +66,7 @@
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Крутой пляж">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане">
       </div>
-       <section class="places content__places">
+        <section class="places content__places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__pos-link">
@@ -129,7 +129,6 @@
           </div>
         </div>
       </section>
-      <div class="page__container">
         <section class="cover">
           <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title"><span>До Байкала
               «на собаках»</span></h2>
@@ -138,7 +137,6 @@
                 на электричках.</span></p>
               </a>
         </section>
-      </div>
     </main>
     <footer class="footer page__footer">
       <div class="footer__links">
