--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </div>
       </section>
         <section class="cover">
-          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title"><span>До Байкала
+          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title cover__text"><span>До Байкала
               «на собаках»</span></h2>
-          <p class="cover__subtitle"><span>По мотивам учебной темы о Транссибе
+          <p class="cover__subtitle cover__text"><span>По мотивам учебной темы о Транссибе
                — путешествие от столицы до Байкала
                 на электричках.</span></p>
               </a>
