--- a/index.html
+++ b/index.html
@@ -1,152 +1,177 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествие по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body class="page">
-    <header class="header page__header">
-      <div class="header__logo"></div>
-      <div class="header__link">
+  <header class="header page__header">
+    <div class="header__logo"></div>
+    <div class="header__link">
       <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_underline">En</a>
-      </div>
-    </header>
-     <main class="content">
-      <section class="lead content__lead">
-        <h1 class="lead__title">Путешествия
-          по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках
-          новостей, а здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка поезда">
-        <p class="lead__caption">ваша полка — верхняя</p>
-      </section>
-       <section class="intro content__intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-           планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
-           самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами
-           Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
-           миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-           Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
-           в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
-           описали некоторые интересные места, достойные вашего отпуска.
-        </p>
-        <ul class="intro__list">
-          <li class="intro__value">
-            <p class="intro__word">Часовых поясов <span class="intro__number">11</span></p>
-          </li>
-          <li class="intro__value">
-            <p class="intro__word">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
-          </li>
-          <li class="intro__value">
-            <p class="intro__word">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
-          </li>
-          <li class="intro__value">
-            <p class="intro__word">Природных заповедников <span class="intro__number">105</span></p>
-          </li>
-          <li class="intro__value">
-            <p class="intro__word">Аэропортов <span class="intro__number">241</span></p>
-          </li>
-        </ul>
-      </section>
-      <div class="photo-grid content__photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака над горой">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Лес в тумане">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо на льду">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Пляж">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Горы">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Берег">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Холмы">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Равнина с горой">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Крутой пляж">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане">
-      </div>
-        <section class="places content__places">
-        <div class="place">
-          <h2 class="place__title">Куршская коса</h2>
-          <div class="place__pos-link">
-            <p class="place__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
-          </div>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Пейзаж косы">
-          <div class="place__paragraph">
-            <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-            <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
-          </div>
+      <a href="#" class="header__lang-link header__lang-link_no-underline">En</a>
+    </div>
+  </header>
+  <main class="content">
+    <section class="lead content__lead">
+      <h1 class="lead__title">Путешествия
+        по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках
+        новостей, а здесь.</p>
+      <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка поезда">
+      <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
+    <section class="intro content__intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+        планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
+        самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами
+        Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
+        миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+        Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
+        в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
+        описали некоторые интересные места, достойные вашего отпуска.
+      </p>
+      <ul class="intro__list">
+        <li>
+          <p class="intro__word">Часовых поясов <span class="intro__number">11</span></p>
+        </li>
+        <li>
+          <p class="intro__word">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
+        </li>
+        <li>
+          <p class="intro__word">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
+        </li>
+        <li>
+          <p class="intro__word">Природных заповедников <span class="intro__number">105</span></p>
+        </li>
+        <li>
+          <p class="intro__word">Аэропортов <span class="intro__number">241</span></p>
+        </li>
+      </ul>
+    </section>
+    <section class="photo-grid content__photo-grid">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака над горой">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Лес в тумане">
+      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо на льду">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Пляж">
+      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Горы">
+      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Берег">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Холмы">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Равнина с горой">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Крутой пляж">
+      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане">
+    </section>
+    <section class="places content__places">
+      <div class="place">
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="place__pos-link">
+          <p class="place__url-heading">URL</p>
+          <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
         </div>
-        <div class="place">
-          <h2 class="place__title">Кольский</h2>
-          <div class="place__pos-link">
-            <p class="place__url-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
-          </div>
-          <img class="place__image" src="./images/place-kolsky.jpg" alt="Пейзаж полуострова">
-          <div class="place__paragraph">
-            <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-              в Мурманск.</p>
-          </div>
+        <img class="place__image" src="./images/place-kosa.jpg" alt="Пейзаж косы">
+        <div class="place__paragraph">
+          <p class="place__text-top">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+            природная зона на краю российского анклава.</p>
+          <p class="place__text-bottom">На этом Калининградская область не заканчивается. Для путешественника и
+            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
+            запах стального, прохладного моря.</p>
         </div>
-        <div class="place">
-          <h2 class="place__title">Алтай</h2>
-          <div class="place__pos-link">
+      </div>
+      <div class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__pos-link">
+          <p class="place__url-heading">URL</p>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+            Geographic</a>
+        </div>
+        <img class="place__image" src="./images/place-kolsky.jpg" alt="Пейзаж полуострова">
+        <div class="place__paragraph">
+          <p class="place__text-top">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+            юг —
+            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__text-bottom">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+            накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
+      </div>
+      <div class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
-          </div>
-          <img class="place__image" src="./images/place-altai.jpg" alt="Пезаж Алтая">
-          <div class="place__paragraph">
-            <p>Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-            <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
-          </div>
         </div>
-        <div class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
-          <div class="place__pos-link">
+        <img class="place__image" src="./images/place-altai.jpg" alt="Пезаж Алтая">
+        <div class="place__paragraph">
+          <p class="place__text-top">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
+            вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле
+            окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+          <p class="place__text-bottom">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+            пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+      </div>
+      <div class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
-          </div>
-          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед Байкала">
-          <div class="place__paragraph">
-            <p>Всем известен Байкал как крупнейшее озеров мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-            <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-          </div>
         </div>
-        <div class="place">
-          <h2 class="place__title">Карелия</h2>
-          <div class="place__pos-link">
+        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед Байкала">
+        <div class="place__paragraph">
+          <p class="place__text-top">Всем известен Байкал как крупнейшее озеров мире. Многие также знают, что это самый
+            большой источник пресной воды и одно из красивейших мест в России.</p>
+          <p class="place__text-bottom">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как
+            можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
+            рекорд — 197.011 км/ч.</p>
+        </div>
+      </div>
+      <div class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__pos-link">
           <p class="place__url-heading">URL</p>
           <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
-          </div>
-          <img class="place__image" src="./images/place-karelia.jpg" alt="Пейзаж Карелии">
-          <div  class="place__paragraph">
-            <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-          </div>
         </div>
-      </section>
-        <section class="cover">
-          <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title cover__text"><span>До Байкала
-              «на собаках»</span></h2>
-          <p class="cover__subtitle cover__text"><span>По мотивам учебной темы о Транссибе
-               — путешествие от столицы до Байкала
-                на электричках.</span></p>
-              </a>
-        </section>
-    </main>
-    <footer class="footer page__footer">
-      <div class="footer__links">
+        <img class="place__image" src="./images/place-karelia.jpg" alt="Пейзаж Карелии">
+        <div class="place__paragraph">
+          <p class="place__text-top">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В
+            девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от
+            земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </div>
+    </section>
+    <section class="cover">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <h2 class="cover__title cover__text">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle cover__text">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+          на электричках.</p>
+      </a>
+    </section>
+  </main>
+  <footer class="footer page__footer">
+    <nav class="footer__links">
       <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
       <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
       <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
       <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
       <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-      </div>
-      <p class="footer__copyright">2022&copy; Кочетков Илья</p>
-    </footer>
+    </nav>
+    <p class="footer__copyright">2022&copy; Кочетков Илья</p>
+  </footer>
 </body>
+
 </html>
