--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header page__header">
     <div class="header__logo"></div>
     <div class="header__link">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_no-underline">En</a>
+      <a href="#" class="header__lang-link header__lang-link_lang-active">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
   <main class="content">
@@ -77,10 +77,10 @@
         </div>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Пейзаж косы">
         <div class="place__paragraph">
-          <p class="place__text-top">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+          <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
-          <p class="place__text-bottom">На этом Калининградская область не заканчивается. Для путешественника и
+          <p class="place__text">На этом Калининградская область не заканчивается. Для путешественника и
             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
             россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
             запах стального, прохладного моря.</p>
@@ -95,10 +95,10 @@
         </div>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Пейзаж полуострова">
         <div class="place__paragraph">
-          <p class="place__text-top">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+          <p class="place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
             юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="place__text-bottom">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+          <p class="place__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
             Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
             Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
             накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -113,10 +113,10 @@
         </div>
         <img class="place__image" src="./images/place-altai.jpg" alt="Пезаж Алтая">
         <div class="place__paragraph">
-          <p class="place__text-top">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
+          <p class="place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
             вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле
             окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-          <p class="place__text-bottom">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+          <p class="place__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
             всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
@@ -129,9 +129,9 @@
         </div>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед Байкала">
         <div class="place__paragraph">
-          <p class="place__text-top">Всем известен Байкал как крупнейшее озеров мире. Многие также знают, что это самый
+          <p class="place__text">Всем известен Байкал как крупнейшее озеров мире. Многие также знают, что это самый
             большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="place__text-bottom">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+          <p class="place__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
             скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как
             можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
             рекорд — 197.011 км/ч.</p>
@@ -145,7 +145,7 @@
         </div>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Пейзаж Карелии">
         <div class="place__paragraph">
-          <p class="place__text-top">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          <p class="place__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
             полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В
@@ -156,8 +156,8 @@
     </section>
     <section class="cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <h2 class="cover__title cover__text">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle cover__text">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
           на электричках.</p>
       </a>
     </section>
